--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 .App {
   text-align: center;
 }
+hr {
+  color: #b5b5b5 !important;
+  background-color: #b5b5b5;
+  margin-top: 0.75rem !important;
+}
