--- a/src/App.css
+++ b/src/App.css
@@ -6,3 +6,11 @@ hr {
   background-color: #b5b5b5;
   margin-top: 0.75rem !important;
 }
+
+@media only screen and (max-width: 992px) {
+  hr {
+    width: 80%;
+    margin: 0px auto;
+    margin-top: 0.75rem !important;
+  }
+}
