--- a/src/Pages/HomePage/HomePage.css
+++ b/src/Pages/HomePage/HomePage.css
@@ -2,8 +2,24 @@
   display: grid;
   grid-template-columns: 0.227fr 0.546fr 0.227fr;
   column-gap: 1rem;
-  padding-top: 1rem;
 }
+.grid-column-home {
+  margin-top: 82px;
+}
+
+.home-mid {
+  height: 100vh;
+  margin-top: 0px;
+  padding-top: 82px;
+  overflow-y: scroll;
+
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.home-mid::-webkit-scrollbar {
+  display: none;
+}
+
 @media only screen and (max-width: 992px) {
   .grid-system-home {
     grid-template-columns: 0.95fr;
